--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -231,7 +231,7 @@
  */
 apiready = function() {
     window.closeWin = function(winName) {
-        $api.setStorage("history", "");
+        initLocalHistory();
         api.closeWin();
     }
 
