--- a/widget/html/patient/patientFrame.html
+++ b/widget/html/patient/patientFrame.html
@@ -22,7 +22,7 @@
                 <span id="title">患者信息维护</span>
             </div>
             <a id="right" tapmode="" onclick="savePatient();" class="button button-raised button-blue">
-                保存
+                确认
             </a>
         </header>
         <div id="main" class="flex-con">
@@ -98,28 +98,32 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    model = api.require('model');
-    query = api.require('query');
-    model.config({
-        appId: historyConstants.appId,
-        appKey: historyConstants.appKey,
-        host: historyConstants.host
-    });
+    // model = api.require('model');
+    // query = api.require('query');
+    // model.config({
+    //     appId: historyConstants.appId,
+    //     appKey: historyConstants.appKey,
+    //     host: historyConstants.host
+    // });
 
     $api.attr($api.byId('age'), 'readonly', 'true');
     $api.attr($api.byId('gender'), 'readonly', 'true');
     $api.attr($api.byId('birthday'), 'readonly', 'true');
 
     userName = $api.getStorage("userName");
+    var history = getStorage("history");
 
-    history_id = api.pageParam.history_id;
-    patient_id = api.pageParam.patient_id;
-    type = "";
+    // history_id = api.pageParam.history_id;
+    // patient_id = api.pageParam.patient_id;
+    // type = "";
 
-    if (patient_id != undefined && patient_id != null && patient_id != "") {
-        type = "modi";
-        $api.attr($api.byId('name'), 'readonly', 'true');
-        getPatient();
+    // if (patient_id != undefined && patient_id != null && patient_id != "") {
+    //     type = "modi";
+    //     $api.attr($api.byId('name'), 'readonly', 'true');
+    //     getPatient();
+    // }
+    if (history.patient_pointer != undefined) {
+        setPatient(history.patient_pointer);
     }
 
     api.addEventListener({
@@ -146,9 +150,16 @@ apiready = function() {
 }
 
 function checkPatientName() {
-    if (type == "modi") {
+    if (getStorage("history") == undefined || getStorage("history").patient_pointer == undefined || getStorage("history").patient_pointer.id == undefined) {
         return;
     }
+    var model = api.require('model');
+    var query = api.require('query');
+    model.config({
+        appId: historyConstants.appId,
+        appKey: historyConstants.appKey,
+        host: historyConstants.host
+    });
     query.createQuery(function(ret, err) {
         if (ret && ret.qid) {
             var queryId = ret.qid;
@@ -207,93 +218,126 @@ function showDupHistoryList(patients) {
     });
 }
 
-function getPatient() {
-    showProgress();
-    query.createQuery(function(ret, err) {
-        if (ret && ret.qid) {
-            model.findById({
-                class: historyConstants.patientTable,
-                id: patient_id
-            }, function(ret, err) {
-                hideProgress();
-                if (err) {
-                    alert(JSON.stringify(err));
-                } else {
-                    if (ret) {
-                        setPatient(ret);
-                    }
-                }
-            });
-        }
-    });
-}
+// function getPatient() {
+//     showProgress();
+//     query.createQuery(function(ret, err) {
+//         if (ret && ret.qid) {
+//             model.findById({
+//                 class: historyConstants.patientTable,
+//                 id: patient_id
+//             }, function(ret, err) {
+//                 hideProgress();
+//                 if (err) {
+//                     alert(JSON.stringify(err));
+//                 } else {
+//                     if (ret) {
+//                         setPatient(ret);
+//                     }
+//                 }
+//             });
+//         }
+//     });
+// }
 
 function savePatient() {
 
-    showProgress();
+    var history = getStorage("history");
 
-    if (type == "modi") {
-        model.updateById({
-            class: historyConstants.patientTable,
-            id: patient_id,
-            value: {
-                // name: $api.byId('name').value,
-                gender: $api.byId('gender').value,
-                birthday: $api.byId('birthday').value,
-                age: $api.byId('age').value,
-                admission_number: $api.byId('admission_number').value,
-                outpatient_number: $api.byId('outpatient_number').value,
-                phone: $api.byId('phone').value,
-                address: $api.byId('address').value,
-                job: $api.byId('job').value
-            }
-        }, function(ret, err) {
-            hideProgress();
-            if (ret) {
-                // patientModiEvent(ret.id)
-                api.closeWin();
-            } else {
-                alert("修改患者信息失败！" + JSON.stringify(err));
-            }
-        });
+    if (history.patient_pointer != undefined) {
+        history.patient_pointer.name = $api.byId('name').value;
+        history.patient_pointer.gender = $api.byId('gender').value;
+        history.patient_pointer.birthday = $api.byId('birthday').value;
+        history.patient_pointer.age = $api.byId('age').value;
+        history.patient_pointer.admission_number = $api.byId('admission_number').value;
+        history.patient_pointer.outpatient_number = $api.byId('outpatient_number').value;
+        history.patient_pointer.phone = $api.byId('phone').value;
+        history.patient_pointer.address = $api.byId('address').value;
+        history.patient_pointer.job = $api.byId('job').value;
+        history.patient_pointer.record_doctor = userName;
     } else {
-        model.insert({
-            class: historyConstants.patientTable,
-            value: {
-                name: $api.byId('name').value,
-                gender: $api.byId('gender').value,
-                birthday: $api.byId('birthday').value,
-                age: $api.byId('age').value,
-                admission_number: $api.byId('admission_number').value,
-                outpatient_number: $api.byId('outpatient_number').value,
-                phone: $api.byId('phone').value,
-                address: $api.byId('address').value,
-                job: $api.byId('job').value,
-                record_doctor: userName
-            }
-        }, function(ret, err) {
-            if (ret) {
-                patientAddEvent(ret.id);
-                model.updateById({
-                    class: historyConstants.historyTable,
-                    id: history_id,
-                    value: {
-                        patient_pointer: ret.id
-                    }
-                }, function(ret, err) {
-                    hideProgress();
-                    if (ret) {
-                        api.closeWin();
-                    } else {
-                        alert("新增患者信息失败！" + JSON.stringify(err));
-                    }
-                });
-            } else {
-                hideProgress();
-                alert("新增患者信息失败！" + JSON.stringify(err));
-            }
-        });
+        var patient_pointer = {
+            name: $api.byId('name').value,
+            gender: $api.byId('gender').value,
+            birthday: $api.byId('birthday').value,
+            age: $api.byId('age').value,
+            admission_number: $api.byId('admission_number').value,
+            outpatient_number: $api.byId('outpatient_number').value,
+            phone: $api.byId('phone').value,
+            address: $api.byId('address').value,
+            job: $api.byId('job').value,
+            record_doctor: userName
+        }
+        history.patient_pointer = patient_pointer;
     }
+
+
+    setStorage("history", history);
+    // patientAddEvent();
+    api.closeWin();
+
+    // showProgress();
+    // if (type == "modi") {
+    //     model.updateById({
+    //         class: historyConstants.patientTable,
+    //         id: patient_id,
+    //         value: {
+    //             // name: $api.byId('name').value,
+    //             gender: $api.byId('gender').value,
+    //             birthday: $api.byId('birthday').value,
+    //             age: $api.byId('age').value,
+    //             admission_number: $api.byId('admission_number').value,
+    //             outpatient_number: $api.byId('outpatient_number').value,
+    //             phone: $api.byId('phone').value,
+    //             address: $api.byId('address').value,
+    //             job: $api.byId('job').value
+    //         }
+    //     }, function(ret, err) {
+    //         hideProgress();
+    //         if (ret) {
+    //             // patientModiEvent(ret.id)
+    //             api.closeWin();
+    //         } else {
+    //             alert("修改患者信息失败！" + JSON.stringify(err));
+    //         }
+    //     });
+    // } else {
+    //     model.insert({
+    //         class: historyConstants.patientTable,
+    //         value: {
+    // name: $api.byId('name').value,
+    // gender: $api.byId('gender').value,
+    // birthday: $api.byId('birthday').value,
+    // age: $api.byId('age').value,
+    // admission_number: $api.byId('admission_number').value,
+    // outpatient_number: $api.byId('outpatient_number').value,
+    // phone: $api.byId('phone').value,
+    // address: $api.byId('address').value,
+    // job: $api.byId('job').value,
+    // record_doctor: userName
+    //         }
+    //     }, function(ret, err) {
+    //         if (ret) {
+    //             patientAddEvent(ret.id);
+    //             model.updateById({
+    //                 class: historyConstants.historyTable,
+    //                 id: history_id,
+    //                 value: {
+    //                     patient_pointer: ret.id
+    //                 }
+    //             }, function(ret, err) {
+    //                 hideProgress();
+    //                 if (ret) {
+    //                     api.closeWin();
+    //                 } else {
+    //                     alert("新增患者信息失败！" + JSON.stringify(err));
+    //                 }
+    //             });
+    //         } else {
+    //             hideProgress();
+    //             alert("新增患者信息失败！" + JSON.stringify(err));
+    //         }
+    //     });
+    // }
 }
 </script>
 
