--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -271,7 +271,6 @@ apiready = function() {
     history_id = api.pageParam.history_id;
     // patient_id = "";
     // physical_id = "";
-    data = {};
     getFullHistory(history_id);
 
     api.addEventListener({
@@ -297,6 +296,13 @@ apiready = function() {
             getFullHistory(history_id);
         }
     });
+
+    api.addEventListener({
+        name: 'keyback'
+    }, function(ret, err) {
+        initLocalHistory();
+    });
+
 }
 
 /**
@@ -338,9 +344,9 @@ function getFullHistory(history_id) {
                     alert(JSON.stringify(err));
                 } else {
                     if (ret[0]) {
-                        data = ret[0];
-                        $api.setStorage("history", data);
-                        setFullHistory(data);
+                        var history = ret[0];
+                        setStorage("history", history);
+                        setFullHistory(history);
                     }
                 }
             });
